--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trivial-countries",
+  "name": "memory-2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,6 @@
   },
   "devDependencies": {
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.1.0"
   }
 }
