--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,12 @@
     "moduleResolution": "Node",
     "strict": true,
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "strictPropertyInitialization": false,
     "skipLibCheck": true
   },
   "include": ["src"]
